# KAIROS

./: .gitignore  CMakeLists.txt  README.md  setup.sh
api/: app.py
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  index.css  main.jsx
dashboard/src/components/: AlertFeed.jsx  ClusterGrid.jsx  JobTimeline.jsx  MetricCards.jsx  OptionSurface.jsx  QueryVisualizer.jsx
data/: calibrate.py
docs/: project_report.md
engine/include/: job.hpp  lsmc.hpp  path_allocator.hpp  shapley.hpp
engine/src/: lsmc.cpp  main.cpp  shapley.cpp
